# pico_iox16

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
pico_iox16_firmware/: Cargo.toml
pico_iox16_firmware/src/: input.rs  lib.rs  nvm.rs  output.rs  runtime.rs
pico_iox16_pico2/: Cargo.toml  Embed.toml  memory.x
pico_iox16_pico2/.cargo/: config.toml
pico_iox16_pico2/src/: input.rs  main.rs  nvm.rs  output.rs  panic.rs  runtime.rs
pico_iox16_protocol/: Cargo.toml
pico_iox16_protocol/src/: lib.rs
pico_iox16_tool/: Cargo.toml  Cross.toml
pico_iox16_tool/src/: calibrate.rs  configure.rs  lib.rs  main.rs  scan.rs
