[package]
edition = "2024"
name = "pico_iox16_firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "1" }
defmt = "1"
zerocopy = { version = "0.8.33", features = ["derive"] }
crc = "3.4.0"
pico_iox16_protocol = { path = "../pico_iox16_protocol" }
thiserror = { version = "2.0.18", default-features = false }
nb = "1.1.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
fugit = "0.3.9"
rounded-div = "0.1.4"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
