[package]
edition = "2024"
name = "pico_iox16_pico2"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1" }
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = ["unproven"] }

defmt = "1"
defmt-rtt = { version = "1", features = ["disable-blocking-mode"] }
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico 2 by default on this template
#rp-pico2 = "0.9" # TODO: Do we have that crate already ?

# If you're not going to use a Board Support Package you'll need these:
rp235x-hal = { git = "https://github.com/stbohne/rp-hal.git", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
    "defmt",
] }
num_enum = { version = "0.7.5", default-features = false }
zerocopy = { version = "0.8.33", features = ["derive"] }
crc = "3.4.0"
pico_iox16_protocol = { path = "../pico_iox16_protocol" }
pico_iox16_firmware = { path = "../pico_iox16_firmware" }
thiserror = { version = "2.0.18", default-features = false }
nb = "1.1.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
fugit = "0.3.9"
rounded-div = "0.1.4"

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
