[package]
name = "pico_iox16_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
crc = "3"
num_enum = { version = "0.7", default-features = false }
thiserror = { version = "2", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }
defmt = { version = "1" }
derive_more = { version = "2.1.1", features = ["display"], default-features = false }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
